# sigmod22

./: CMakeLists.txt  README.md  config.cmake
cmake/: FindCUDA.cmake
include/dnndiff/: cuda_helper.h  ops.h  substitution.h
src/core/: activation.cc  batchnorm.cc  cast.cc  concat.cc  constant.cc  conv2d.cc  diffcalc.cc  element.cc  elementwise_unary.cc  enlarge.cc  fuse_conv_batchnorm.cc  matmul.cc  merge_gconv.cc  mul.cc  noop.cc  ops.cc  pad.cc  pool2d.cc  reduce.cc  reshape.cc  resize.cc  shape.cc  slice.cc  split.cc  squeeze.cc  substitution.cc  topk.cc  transpose.cc  unsqueeze.cc  where.cc
src/cudnn/: activation_kernel.cu  batchnorm_kernel.cu  cast_kernel.cu  concat_kernel.cu  constant_kernel.cu  conv2d_kernel.cu  cuda_helper.cu  diffcalc_kernel.cu  element_kernel.cu  elementwise_unary_kernel.cu  enlarge_kernel.cu  fuse_conv_batchnorm_kernel.cu  matmul_kernel.cu  merge_gconv_kernel.cu  mul_kernel.cu  ops_cudnn.cu  pad_kernel.cu  pool2d_kernel.cu  reduce_kernel.cu  reshape_kernel.cu  resize_kernel.cu  shape_kernel.cu  slice_kernel.cu  squeeze_kernel.cu  topk_kernel.cu  transpose_kernel.cu  unsqueeze_kernel.cu  where_kernel.cu
